cabal-version:       >=1.10
name:                udpretty
version:             1.0
license-file:        LICENSE
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable udpretty
  main-is:             Main.hs
  other-modules:       Diary.Json
                     , Diary.Time
                     , Diary.Tex
                     , Diary.Utility
                     , Diary.Processed
  hs-source-dirs:      src
  build-depends:       base >=4.12 && <4.13
                     , aeson
                     , text
                     , time
                     , HaTeX
                     , cassava
                     , bifunctors
                     , bytestring
                     , containers
                     , lens
                     , pretty-simple
  default-language:    Haskell2010
  ghc-options: -Wall
  build-tools:         hlint
                     , hindent
                     , cabal-install

